# UltraLog

./: CLAUDE.md  Cargo.toml  README.md  app.config.ts  app.vue  bun.lockb  nuxt.config.ts  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
components/: CoreDataCard.vue  PlaybackChart.vue  PlaybackDateRangePicker.vue  ResponsiveLineChart.vue
composables/: useDashboard.ts
docs/: CNAME  index.html
exampleLogs/ecumaster/: 220kpa.emublog
exampleLogs/ecumaster/EMU Pro Logs/: 2025_1218_1904.csv
exampleLogs/speeduino/: speeduino.mlg
layouts/: default.vue
pages/: index.vue
src/: App.vue  app.rs  lib.rs  main.ts  state.rs  units.rs  updater.rs
src-tauri/src/: main.rs
src/components/: ChannelCard.vue  FileUploadList.vue  NavBar.vue
src/parsers/: ecumaster.rs  haltech.rs  mod.rs  speeduino.rs  types.rs
src/ui/: channels.rs  chart.rs  export.rs  icons.rs  menu.rs  mod.rs  normalization_editor.rs  sidebar.rs  timeline.rs  toast.rs  update_dialog.rs
